# whatsapp-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_whatsapp_cli.py
whatsapp_cli/: __init__.py  __main__.py
whatsapp_cli/commands/: create_schedule.py  remove_schedule.py  reset_schedules.py  schedule.py
whatsapp_cli/commands/schedule/: create_schedule.py  list.py  remove_schedule.py  reset_schedules.py  schedule.py
whatsapp_cli/prelude/: config.py  initialize_config.py
whatsapp_cli/prelude/schedule/: create_schedule.py  is_valid.py  remove_schedule.py  sort_schedules.py
